# AutoStudio

./: .gitignore  LICENSE  LIVE_TEST_SUMMARY.md  PHASE_12_COMPLETE.md  README.md  benchmark_bm25.py  doc_inventory.md  docs_audit_report.md  docs_gap_report.md  index_repo.py  mcp.json  mcp_retriever.py  prepare_reranker_models.py  pyproject.toml  requirements-dev.txt  requirements.txt  sweep.csv  sweep.json  system_components.md
Docs/: ACTION_LEVEL_REPRESENTATION_EVAL_20260322.md  AGENT_CONTROLLER.md  AGENT_LOOP_WORKFLOW.md  ALL_PROMPTS.md  ANTI_CHEATING_MODEL_USAGE_AUDIT.md  ARCHITECTURE.md  CAUSAL_FAILURE_FEEDBACK_EVAL_20260322.md  CODING_AGENT_ARCHITECTURE_GUIDE.md  CONFIGURATION.md  CURRENT_HEAD_CONTAMINATION_AUDIT.json  CURRENT_HEAD_CONTAMINATION_AUDIT.md  DEPS_MISSING_RCA.md  DIAGRAM_RCA_20260323.md  DOCUMENTATION_UPDATE_PLAN_REACT_20260323.md  EDIT_PIPELINE_AUDIT_VALIDATION_CRITIC_ANALYSIS.md  EDIT_PIPELINE_DETAILED_ANALYSIS.md  EXECUTION_LOOP_TIDY_PLAN.md  FAILURE_MINING.md  FAILURE_STATE_ACTION_LEVEL_AUDIT_20260322.md  FIRST_ATTEMPT_REFUSAL_INVESTIGATION_REPORT.md  HIERARCHICAL_PHASED_ORCHESTRATION_EXECUTION_ROADMAP.md  HIERARCHICAL_PHASED_ORCHESTRATION_PLAN.md  HIERARCHICAL_PHASED_ORCHESTRATION_PRECODING_DECISIONS.md  HIERARCHICAL_PHASED_ORCHESTRATION_TASK_BREAKDOWN.md  INTEGRATION_TESTS.md  LIVE4_2TASKS_REPORT_20260322.md  LIVE4_FAILURE_RCA.md  LIVE4_FULL_RUN_REPORT_20260322.md  LIVE4_RUN_LOGS_20260322_144730.txt  LIVE4_RUN_REPORT_20260322.md  LIVE4_RUN_REPORT_20260322_RCA.md  MINIMAL_EDIT_PIPELINE.md  MINIMAL_PIPELINE_COMPARISON_REPORT.md  MINIMAL_PIPELINE_RCA_REPORT.md  MIXED_INTENT_DESIGN_ANALYSIS.md  OBSERVABILITY.md  PAIRED8_DEEP_ANALYSIS_20260322.md  PATCH_GROUNDING_AUDIT.md  PHASE_5_ATTEMPT_LOOP.md  PLAN_STEP_QUERY_CONTRACT_DESIGN.md  (+112 more)
agent/: README.md  __init__.py  __main__.py  agent_loop.py  executor.py  state.py  step_result.py  test_executor.py
agent_v2/: README.md  __main__.py  cli_adapter.py  config.py  exploration_test_repos.py
artifacts/: audit_batch.jsonl  audit_mini.jsonl  search_quality_audit_mini_report.json  search_quality_audit_report.json
config/: README.md  __init__.py  agent_config.py  agent_runtime.py  config_validator.py  context_limits.py  editing_config.py  logging_config.py  observability_config.py  policy_config.py  policy_config.yaml  repo_graph_config.py  repo_intelligence_config.py  retrieval_config.py  router_config.py  startup.py  tool_budgets.py  tool_graph_config.py
dev/: docs_audit_plan.md
editing/: README.md  __init__.py  ast_patcher.py  conflict_resolver.py  diff_planner.py  grounded_patch_generator.py  merge_strategies.py  patch_effectiveness.py  patch_executor.py  patch_generator.py  patch_validator.py  patch_verification.py  semantic_diff.py  semantic_feedback.py  syntax_validation.py  test_repair_loop.py  test_runner_utils.py
eval/: LIVE_EVAL_AUDIT.md  __init__.py  live_executor.py  metrics.py  runner.py  tier_definitions.py
infra/: download_models.sh  setup_litellm.sh  setup_llm-cpp.sh
planner/: README.md  __init__.py  planner.py  planner_dataset.json  planner_eval.py  planner_prompts.py  planner_utils.py
repo_graph/: README.md  __init__.py  change_detector.py  graph_builder.py  graph_query.py  graph_storage.py  repo_map_builder.py  repo_map_updater.py
repo_index/: README.md  __init__.py  dependency_extractor.py  index_repo.py  indexer.py  parser.py  symbol_extractor.py
router_eval/: README.md  __init__.py  adversarial_dataset_v2.json  dataset.py  dataset_v2.py  golden_dataset_v2.json  (+3 more)
(+2191 files in other folders)
