[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autostudio"
version = "0.1.0"
description = "AI coding assistant with retrieval, planning, and editing pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "PyYAML>=6.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
]

[project.scripts]
autostudio = "agent.cli.entrypoint:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "config*", "editing*", "planner*", "repo_graph*", "repo_index*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks test as integration test (requires real services, TEST_MODE=integration)",
]
