[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autostudio"
version = "0.1.0"
description = "AI coding assistant with retrieval, planning, and editing pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "PyYAML>=6.0",
    "rapidfuzz>=3.0.0",
    "rank-bm25>=0.2.2",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
autostudio = "agent.cli.entrypoint:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "config*", "editing*", "planner*", "repo_graph*", "repo_index*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks test as integration test (requires real services, TEST_MODE=integration)",
    "explain_inject: EXPLAIN code-lane injected retrieval contract matrix (dispatch + helpers)",
    "replanner_regression: replanner prompt regression suite (8 scenarios, live LLM calls); every prompt change must pass",
]
# Benchmark fixtures contain pytest files for manual validation; do not collect them as AutoStudio tests.
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    "tests/agent_eval/fixtures",
    "tests/evals/fixtures",
]
